Acessando o Banco de dados

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "marko": "^4.17.3"
+    "marko": "^4.17.3",
+    "sqlite": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
